<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_search"
            android:icon="@drawable/ic_search"
            android:title="Search"
            app:showAsAction="ifRoom|collapseActionView"
            app:actionViewClass="android.widget.SearchView"/>

    <item
        android:id="@+id/filter"
        android:icon="@drawable/ic_filter_list_white_24dp"
        android:title="@string/menu_filter"
        app:showAsAction="ifRoom" />

</menu>